<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/cardViewaddserviceProvider"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                card_view:cardBackgroundColor="@color/card_color"
                card_view:cardCornerRadius="5dp"
                card_view:cardElevation="4dp"
                card_view:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:orientation="vertical"
                    android:padding="@dimen/activity_horizontal_margin">


                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/username"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/edittextanimation"
                            android:focusableInTouchMode="true"
                            android:hint="User Name"
                            android:imeOptions="actionUnspecified"
                            android:maxLines="1"
                            android:padding="10.0dip"
                            android:singleLine="true"
                            android:textColor="@color/input_register_bg" />

                    </com.google.android.material.textfield.TextInputLayout>


                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/mobilenumber"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/edittextanimation"
                            android:hint="@string/hint_mobile"
                            android:inputType="number"
                            android:maxLength="10"
                            android:maxLines="1"
                            android:padding="10.0dip"
                            android:singleLine="true"
                            android:textColor="@color/input_register_bg" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/address"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/edittextanimation"
                            android:hint="Address"
                            android:maxLines="1"
                            android:padding="10.0dip"
                            android:singleLine="true"
                            android:textColor="@color/input_register_bg" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/note"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/edittextanimation"
                            android:hint="Note"
                            android:inputType="textMultiLine"
                            android:maxLength="6"
                            android:maxLines="1"
                            android:padding="10.0dip"
                            android:singleLine="true"
                            android:textColor="@color/input_register_bg" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/date_time"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/edittextanimation"
                            android:hint="Visit Date And Time"
                            android:inputType="datetime"
                            android:focusable="false"
                            android:maxLength="6"
                            android:maxLines="1"
                            android:padding="10.0dip"
                            android:singleLine="true"
                            android:textColor="@color/input_register_bg" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/discussion"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/edittextanimation"
                            android:focusableInTouchMode="true"
                            android:hint="@string/hint_discu"
                            android:imeOptions="actionUnspecified"
                            android:inputType="textMultiLine"
                            android:maxLines="1"
                            android:padding="10.0dip"
                            android:singleLine="true"
                            android:textColor="@color/input_register_bg" />

                    </com.google.android.material.textfield.TextInputLayout>
                    
                    <Button
                        android:id="@+id/add_button"
                        style="?android:textAppearanceSmall"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:background="@color/colorAccent"
                        android:text="@string/action_sign_in_short"
                        android:textColor="@android:color/white"
                        android:textStyle="bold" />
                    

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center|bottom"
                android:layout_marginBottom="20dp"
                android:visibility="gone" />






        </LinearLayout>

    </ScrollView>

</LinearLayout>
